--- a/DetectHardware/app/src/main/res/values/strings.xml
+++ b/DetectHardware/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="intro_text"> Save Your DAMN Life! </string>
 
     <string name="default_msg"> I\'M IN DANGER </string>
+    <string name="widget_button_text">SEND SOS</string>
 
 </resources>
