--- a/DetectHardware/app/src/main/res/values/strings.xml
+++ b/DetectHardware/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"> SOS Application </string>
+    <string name="app_name"> Simple SOS App </string>
 
     <string name="intro_text"> Save Your DAMN Life! </string>
 
