--- a/DetectHardware/app/src/main/res/values/strings.xml
+++ b/DetectHardware/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="default_msg"> I\'M IN DANGER </string>
     <string name="widget_button_text">SEND SOS</string>
 
+    <string name="emg_contacts_text"> Long tap on an emergency contact to delete it. </string>
+
 </resources>
